--- a/src/components/inputs/z-select/styles.css
+++ b/src/components/inputs/z-select/styles.css
@@ -39,6 +39,10 @@
   z-index: 20;
 }
 
+.select-wrapper .ul-scroll-wrapper.fixed {
+  position: static;
+}
+
 .select-wrapper .ul-scroll-wrapper > z-list {
   position: relative;
   overflow: auto;
